2025.04.30 16:23 Mac 替换主页饼状图及随机式神的方法